k8s-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ingress-example.com 
    http:
      paths:
      - path: /mail
        pathType: Prefix
        backend:
          service:
            name: mail-service
            port:
              number: 80
      
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 80
